--- a/page2.html
+++ b/page2.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pipi pupu</title>
+    <title>Document</title>
   </head>
   <body>
-    <p>lkygjfhyv</p>
+    <p>hello</p>
   </body>
 </html>
